多想到要買的東西

--- a/table.html
+++ b/table.html
@@ -200,7 +200,6 @@
       <td class="J">目前非長途狀況較少，仍需觀察是否有店家可以修理</td>
     </tr>
     <tr>
-      <!-- 品名,型號,原因,連結,價格,日期,狀況,實際消費,使用年限,備註 -->
       <td class="A">手機</td>
       <td class="B">iphone12/13</td>
       <td class="C">6s螢幕碎裂程式跑不動，到退休年齡，可能當另一支手機的備用</td>
@@ -211,6 +210,19 @@
       <td class="H">未知</td>
       <td class="I">6年(2015至今)</td>
       <td class="J">金額昂貴但仍是考慮範圍，10月才出13價格會有波動</td>
+    </tr>
+    <tr>
+      <!-- 品名,型號,原因,連結,價格,日期,狀況,實際消費,使用年限,備註 -->
+      <td class="A">沙發</td>
+      <td class="B">IKEA EKTORP系列</td>
+      <td class="C">搭配電視及<strike>爽度</strike>客人的使用</td>
+      <td class="D">https://www.ikea.com.tw/zh/collections/ektorp?&&order=PRICEASC</td>
+      <td class="E">雙人米色7900高CP，三人9900</td>
+      <td class="F">2020/02/01</td>
+      <td class="G">非迫切需要但房間仍會需要這東西</td>
+      <td class="H">尚未</td>
+      <td class="I">-</td>
+      <td class="J">等到有閒錢才有機會購買</td>
     </tr>
   </tbody>
     <script>
