--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
   <!-- <link    rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  /> -->
   <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=ZCOOL+XiaoWei&display=swap');
     body {
       background: #ccc;
-      font-family: "Microsoft JhengHei",arial;
+      background-image: url(./bg.jpg);
+      font-family: 'ZCOOL XiaoWei','Ma Shan Zheng',"Microsoft JhengHei", cursive,arial;
     }
 
     .buttondiv {
@@ -62,6 +65,21 @@
       animation: flipInX 1s ease-in 50ms;
     }
 
+    td{
+      position: relative;
+      overflow: hidden;
+    }
+    td::after{
+      content: "";
+      position: absolute;
+      background: linear-gradient(135deg,transparent 30% , #FFFFFFBB 50%,transparent 70%); /*漸層做金屬色*/
+      transform: translate(-60%);
+      left: -300%;
+      top:-100%;
+      width: 300%;
+      height: 300%;
+      animation: demo2-1 1s linear;
+    }
     @keyframes flipInX {
       0% {
         -webkit-transform: perspective(400px) rotateX(90deg);
@@ -92,6 +110,17 @@
       to {
         -webkit-transform: perspective(400px);
         transform: perspective(400px)
+      }
+    }
+    @keyframes demo2-1 {
+        50%{
+          left: 6%;
+        }
+        70%{
+          left: 60%;
+        }
+      100%{
+        left:120%;
       }
     }
   </style>
