--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
   <!-- <link    rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  /> -->
   <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=ZCOOL+XiaoWei&display=swap');
+    /* @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap'); */
+    @import url('https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap');
     body {
       background: #ccc;
+      font-family: "Microsoft JhengHei",arial;
       background-image: url(./bg.jpg);
-      font-family: 'ZCOOL XiaoWei','Ma Shan Zheng',"Microsoft JhengHei", cursive,arial;
+      /* background-size: cover; */
+      font-family: 'Ma Shan Zheng', 'ZCOOL XiaoWei' , cursive;
     }
 
     .buttondiv {
@@ -61,25 +63,28 @@
       width: 8%;
     }
 
-    tr>*:hover {
-      animation: flipInX 1s ease-in 50ms;
-    }
-
     td{
       position: relative;
       overflow: hidden;
     }
-    td::after{
-      content: "";
+
+    td:after{
       position: absolute;
-      background: linear-gradient(135deg,transparent 30% , #FFFFFFBB 50%,transparent 70%); /*漸層做金屬色*/
+      content: "";
+      background: linear-gradient(135deg,transparent 30% , #FFFFFFBB 50%,transparent 70%); 
       transform: translate(-60%);
       left: -300%;
       top:-100%;
       width: 300%;
       height: 300%;
-      animation: demo2-1 1s linear;
+      animation: shiny 1s linear ;
     }
+
+
+    tr>*:hover {
+      animation: flipInX 1s ease-in 100ms;
+    }
+
     @keyframes flipInX {
       0% {
         -webkit-transform: perspective(400px) rotateX(90deg);
@@ -112,7 +117,7 @@
         transform: perspective(400px)
       }
     }
-    @keyframes demo2-1 {
+    @keyframes shiny {
         50%{
           left: 6%;
         }
@@ -120,7 +125,7 @@
           left: 60%;
         }
       100%{
-        left:120%;
+        left:175%;
       }
     }
   </style>
@@ -164,9 +169,9 @@
       <td class="E">≒1000<br>≒500</td>
       <td class="F">2021/07/29</td>
       <td class="G">仍不會斷電但需盡快更換</td>
-      <td class="H">尚未購買</td>
-      <td class="I">七年</td>
-      <td class="J">應七年更換一次</td>
+      <td class="H">450</td>
+      <td class="I">2017購買至今</td>
+      <td class="J">目前仍有30幾%的存活率</td>
     </tr>
     <tr>
       <td class="A">ASUS平板 </td>
@@ -188,9 +193,9 @@
       <td class="E">≒700~2000</td>
       <td class="F">2021/07/29</td>
       <td class="G">若插著電源仍可使用，拔掉即斷電，若要外出就非常緊急</td>
-      <td class="H">尚未</td>
+      <td class="H">1000</td>
       <td class="I">2018/10至今</td>
-      <td class="J">已購買電池仍無法充電，排除電池可能</td>
+      <td class="J">2021/08/01已從大陸購買，品質未知</td>
     </tr>
     <tr>
       <td class="A">小米空氣清淨機3</td>
@@ -238,10 +243,9 @@
       <td class="G">仍可使用，但撐多久不知道，可能要考慮換新螢幕和螢幕貼</td>
       <td class="H">未知</td>
       <td class="I">6年(2015至今)</td>
-      <td class="J">金額昂貴但仍是考慮範圍，10月才出13價格會有波動</td>
+      <td class="J">金額昂貴但仍是考慮範圍，10月才出13價格會有波動，螢幕維修1500</td>
     </tr>
     <tr>
-      <!-- 品名,型號,原因,連結,價格,日期,狀況,實際消費,使用年限,備註 -->
       <td class="A">沙發</td>
       <td class="B">IKEA EKTORP系列</td>
       <td class="C">搭配電視及<strike>爽度</strike>客人的使用</td>
@@ -252,6 +256,31 @@
       <td class="H">尚未</td>
       <td class="I">-</td>
       <td class="J">等到有閒錢才有機會購買</td>
+    </tr>
+    <tr>
+      <td class="A">剪刀</td>
+      <td class="B">一般、圓頭</td>
+      <td class="C">需要</td>
+      <td class="D"></td>
+      <td class="E">100</td>
+      <td class="F">2021/08/04</td>
+      <td class="G">要剪東西</td>
+      <td class="H">100</td>
+      <td class="I"></td>
+      <td class="J">已買</td>
+    </tr>
+    <tr>
+      <!-- 品名,型號,原因,連結,價格,日期,狀況,實際消費,使用年限,備註 -->
+      <td class="A"></td>
+      <td class="B"></td>
+      <td class="C"></td>
+      <td class="D"></td>
+      <td class="E"></td>
+      <td class="F"></td>
+      <td class="G"></td>
+      <td class="H"></td>
+      <td class="I"></td>
+      <td class="J"></td>
     </tr>
   </tbody>
     <script>
